<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageWithLetter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:contentDescription="@string/image_description_letter"
        app:layout_constraintBottom_toTopOf="@+id/letterCanvas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_compare"
        app:srcCompat="@drawable/letter_a" />

    <tech.lalik.learntowrite.LetterCanvas
        android:id="@+id/letterCanvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWithLetter" />

    <Button
        android:id="@+id/button_compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCompare"
        android:text="@string/button_compare"
        app:layout_constraintBottom_toTopOf="@+id/imageWithLetter"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClear"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toTopOf="@+id/imageWithLetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_compare"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>